2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace stpcpy with grub_stpcpy in tools.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle Japanese special keys.
	Reported by: Hiroyuki YAMAMORI.
	Codes supplied by: Hiroyuki YAMAMORI.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c: Document memdisk implying --prefix.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ehci.c (grub_ehci_fini_hw): Ignore errors, not
	much we can do about it anyway.

2013-04-12  Aleš Nesrsta  <starous@volny.cz>

	Fix handling of split transfers.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/http.c: Fix bad free.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c: Don't attempt to send more
	than buffer size.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Disable partmap check on i386-ieee1275 due to openfirmware issues.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Fix it on powerpc.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Turn off QEMU ACPI-way since new releases don't have shutdown port
	anymore.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Update coreboot status info.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_cmd_date.in: New test for datetime.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Fix missing qemudisk setting.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Support i386-ieee1275 grub-mkrescue and make check on it.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Merge powerpc grub-mkrescue flavour with common. Use xorriso HFS+
	feature for it.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Fix description of GRUB_CMDLINE_XEN and
	GRUB_CMDLINE_XEN_DEFAULT.
	Reported by: 	Marc Warne (GigaTux) <gigatux>
