@@ -21,12 +21,12 @@
 
 #include <grub/macho.h>
 
-#define GRUB_MACHO_CPUTYPE_IS_HOST32(x) ((x)==0x00000007)
-#define GRUB_MACHO_CPUTYPE_IS_HOST64(x) ((x)==0x01000007)
+#define GRUB_MACHO_CPUTYPE_IS_HOST32(x) ((x) == GRUB_MACHO_CPUTYPE_IA32)
+#define GRUB_MACHO_CPUTYPE_IS_HOST64(x) ((x) == GRUB_MACHO_CPUTYPE_AMD64)
 #ifdef __x86_64__
-#define GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT(x) ((x)==0x01000007)
+#define GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT(x) ((x) == GRUB_MACHO_CPUTYPE_AMD64)
 #else
-#define GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT(x) ((x)==0x00000007)
+#define GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT(x) ((x) == GRUB_MACHO_CPUTYPE_IA32)
 #endif
 
 struct grub_macho_thread32
