@@ -26,6 +26,13 @@ struct grub_macho_fat_header
   grub_uint32_t magic;
   grub_uint32_t nfat_arch;
 } __attribute__ ((packed));
+
+enum
+  {
+    GRUB_MACHO_CPUTYPE_IA32 = 0x00000007,
+    GRUB_MACHO_CPUTYPE_AMD64 = 0x01000007
+  };
+
 #define GRUB_MACHO_FAT_MAGIC 0xcafebabe
 #define GRUB_MACHO_FAT_EFI_MAGIC 0x0ef1fab9
 
