@@ -1,5 +1,9 @@
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Better support Apple Intel Macs on CD.
+
+2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Replace stpcpy with grub_stpcpy in tools.
 
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
